# fastapi-docker

./: .env.sample  docker-compose.yml  setup.sh
.devcontainer/: devcontainer.json  docker-compose.extend.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/api/: app.py
backend/tests/: test_app.py
nginx/: Dockerfile
